# FastAPITemplate

./: README.md  pyproject.toml
app/: main.py
app/config/: __init__.py
app/endpoints/: __init__.py  client.py  tag.py
app/models/: client.py  client_tag.py  mailing.py  message.py  tag.py
app/schemas/: __init__.py  client.py  tag.py
lib/: check_errors.py  db_accessor.py  db_connector.py
