[tool.poetry]
name = "fastapitemplate"
version = "0.1.0"
description = ""
authors = ["Andray-Sfedu <moscow.russia.mai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
fastapi-pagination = "^0.9.3"
SQLAlchemy = "^1.4.40"
icecream = "^2.1.3"
asyncpg = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
